header section & Red_Box added

--- a/contact.html
+++ b/contact.html
@@ -5,123 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Contact us</title>
 </head>
 <body>
-    <h1>Contact us Page</h1>
 
+<!-- header section starts  -->
 
+<header class="header">
 
-    <!-----------index html code ------------->
-
-
-<!---------------header-------------
-
-  <div class="header">
-    <div class="container">
-        <div class="navbar">
-            <div class="logo">
-                <img src="images/logo.png" width="185px">
-            </div>
-            <nav>
-                <ul id="MenuItems">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Pages</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">Contact</a></li>
-                </ul>
-            </nav>
-            <img src="images/favicon.png" width="30px" height="30px">
-        </div>
-        <div class="row">
-            <div class="col-2">
-                <h1>Sale 20% Off<br>On Everything</h1>
-                <p>Explicabo esse amet tempora quibusdam laudantium, laborum<br> 
-                   eaque magnam fugiat hic? Esse dicta aliquid error repudiandae<br>
-                   earum suscipit fugiat molestias, veniam, vel architecto veritatis<br>
-                   delectus repellat modi impedit sequi.</p>
-                   <a href="" class="btn">Shop Now</a>
-            </div>
-            <div class="col-2">
-                <img src="images/slider-bg.jpg">
-            </div>
-        </div>
+    <a href="#" class="logo"><img src="images/logo.png" width="200px"></a>
+ 
+    <nav class="navbar">
+       <div id="close-navbar" class="fas fa-times"></div>
+       <a href="index.html">Home</a>
+       <a href="about.html">about</a>
+       <a href="#">Pages</a>
+       <a href="#">Blog</a>
+       <a href="#">Contact</a>
+    </nav>
+ 
+    <div class="icons">
+       <div id="account-btn" class="fas fa-user"></div>
+       <div id="menu-btn" class="fas fa-bars"></div>
     </div>
-</div>
------>
-<!-------------------------------small-container-------------
-<div class="testimonial">
-    <div class="small-container">
-        <h2 class="title">Why Shop With Us</h2>
-        <div class="row">
-            <div class="col-3">
-                <img src="images/free.png">
-                <h3>Fast Delivery</h3>
-                <p>
-                    variations of passages of Lorem Ipsum available. 
-                </p>
-            </div>
-            <div class="col-3">
-                <img src="images/shipped.png">
-                <h3>Free Shipping</h3>
-                <p>
-                    variations of passages of Lorem Ipsum available. 
-                </p>
-            </div>
-            <div class="col-3">
-                <img src="images/medal.png">
-                <h3>Best Quality</h3>
-                <p>
-                    variations of passages of Lorem Ipsum available. 
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
+ 
+ </header>
+ 
+<!-------------Red_Box----------------->
 
-    ---------------------------->
+<div class="containerRedBox">
+    <span class="textRedBox">
+        Contact us
+    </span>
+ </div>
 
-    <section class="arrival_section">
-        <div class="container">
-           <div class="box">
-              <div class="arrival_bg_box">
-                 <img src="images/arrival-bg.jpg" alt="">
-              </div>
-              <div class="row">
-                 <div class="col-md-6 ml-auto">
-                    <div class="heading_container remove_line_bt">
-                       <h2>
-                          #NewArrivals
-                       </h2>
-                    </div>
-                    <p style="margin-top: 20px;margin-bottom: 30px;">
-                       Vitae fugiat laboriosam officia perferendis provident aliquid voluptatibus dolorem, fugit ullam sit earum id eaque nisi hic? Tenetur commodi, nisi rem vel, ea eaque ab ipsa, autem similique ex unde!
-                    </p>
-                    <a href="#" class="btn">Shop Now</a>
-                 </div>
-              </div>
-           </div>
-        </div>
-     </section>
 
- <!--------------------offer----------------------
-    <div class="offer">
-        <div class="small-container">
-            <div class="row">
-                <div class="col-boy">
-                    <img src="images/arrival-bg.jpg" class="offer-img">
-                </div>
-                <div class="col-boy">
-                    <h1>#NewArrivals</h1>
-                    <small>Vitae fugiat laboriosam officia perferendis provident aliquid voluptatibus dolorem, fugit ullam sit earum id eaque nisi hic? Tenetur commodi, nisi rem vel, ea eaque ab ipsa, autem similique ex unde!
-                     </small><br>
-                     <a href="" class="btn">Shop Now</a>
-                </div>
-            </div>
-        </div>
-    </div>
--->
 
 
 
