png-bg css added

--- a/Home.html
+++ b/Home.html
@@ -71,19 +71,19 @@
    <h1 class="heading">Why Shop With Us</h1>
    <div class="box-container">
       <div class="box">
-         <img src="images/free.png" alt="">
+         <img src="images/free.png" alt="" class="png-bg">
          <h3>Fast Delivery</h3>
          <p>variations of passages of Lorem<br> Ipsum available.</p>
       </div>
 
       <div class="box">
-         <img src="images/shipped.png" alt="">
+         <img src="images/shipped.png" alt="" class="png-bg">
          <h3>Free Shipping</h3>
          <p>variations of passages of Lorem<br> Ipsum available.</p>
       </div>
 
       <div class="box">
-         <img src="images/medal.png" alt="">
+         <img src="images/medal.png" alt="" class="png-bg">
          <h3>Best Quality</h3>
          <p>variations of passages of Lorem<br> Ipsum available.</p>
       </div>
