--- a/Home.html
+++ b/Home.html
@@ -252,7 +252,7 @@
          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="images/client.jpg" alt="First slide" style="width:8%">
+                <img class="d-block w-100" src="images/client.jpg" alt="First slide">
               </div>
               <div class="carousel-item">
                 <img class="d-block w-100" src="images/client.jpg" alt="Second slide" style="width:8%">
@@ -271,14 +271,6 @@
             </a>
           </div>
       </div>   
-   </div>
-</div>
-
-<div class="carousel-item">
-   <img src="..." alt="...">
-   <div class="carousel-caption d-none d-md-block">
-     <h5>...</h5>
-     <p>...</p>
    </div>
 </div>
 
