--- a/Home.html
+++ b/Home.html
@@ -249,26 +249,26 @@
    <div class="">
       <div class="">
          <h1 class="heading">Customer's Testimonial</h1>
-         <div class="carousel-item">
-            <img src="images/client.jpg" alt="" style="width:18%">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>...</h5>
-              <p>...</p>
+         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-10" src="images/client.jpg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-10" src="images/client.jpg" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-10" src="images/client.jpg" alt="Third slide">
+              </div>
             </div>
-          </div>
-          <div class="carousel-item">
-            <img src="..." alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>...</h5>
-              <p>...</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="..." alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>...</h5>
-              <p>...</p>
-            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
           </div>
       </div>   
    </div>
