--- a/Home.html
+++ b/Home.html
@@ -253,6 +253,10 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img class="d-block w-10" src="images/client.jpg" alt="First slide">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Anna Trevor</h5>
+                  <p>Dignissimos reprehenderit repellendus nobis error quibusdam? Atque animi sint unde quis reprehenderit, et, perspiciatis, debitis totam est deserunt eius officiis ipsum ducimus ad labore modi voluptatibus accusantium sapiente nam! Quaerat.</p>
+                </div>
               </div>
               <div class="carousel-item">
                 <img class="d-block w-10" src="images/client.jpg" alt="Second slide">
