--- a/inde.html
+++ b/inde.html
@@ -26,7 +26,7 @@
 
 <section id="title">
   <div class="container-fluid">
-    <div class="header_img">
+    <div class="header-img">
       
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-md navbar-light">
