--- a/inde.html
+++ b/inde.html
@@ -46,7 +46,7 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">about</a>
-                <a class="dropdown-item" href="#">test</a>
+                <a class="dropdown-item" href="#">testimonial</a>
               </div>
             </li>
             <li class="nav-item">
@@ -72,8 +72,8 @@
           <button type="button" class="btn btn-warning btn-lg shop-btn">Shop Now</button>
         </div>
 
-        <div>
-          <!-- <img class="title-image" src="images/slider-bg.jpg"> -->
+        <div class="">
+          <img class="title-image" src="images/slider-bg.jpg">
         </div>
       </div>
         
