header-img | container-fluid

--- a/inde.html
+++ b/inde.html
@@ -25,8 +25,8 @@
 <body>
 
 <section id="title">
-  <div class="container-fluid">
-    <div class="header-img">
+  <div class="header-img">
+    <div class="container-fluid">
       
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-md navbar-light">
@@ -72,9 +72,9 @@
           <button type="button" class="btn btn-warning btn-lg shop-btn">Shop Now</button>
         </div>
 
-        <div class="">
+        <!-- <div class="">
           <img class="title-image" src="images/slider-bg.jpg">
-        </div>
+        </div> -->
       </div>
         
     </div>
