--- a/inde.html
+++ b/inde.html
@@ -149,6 +149,54 @@
 
 </section>
 
+<!------ footer section---------->
+
+<section class="footer">
+
+  <div class="box-container">
+
+     <div class="box">
+        <h3> <i class=""></i> Famms </h3>
+        <p><span id="footer-address">ADDRESS:</span> 28 White tower, Street Name New York City, USA</p>
+        <p><span id="footer-address">TELEPHONE:</span> +91 987 654 3210</p>
+        <p><span id="footer-address">EMAIL:</span> yourmain@gmail.com</p>
+     </div>
+
+     <div class="box">
+        <h3>MENU</h3>
+        <a href="index.html" class="link">home</a>
+        <a href="about.html" class="link">about</a>
+        <a href="courses.html" class="link">Services</a>
+        <a href="contact.html" class="link">Testimonial</a>
+        <a href="contact.html" class="link">Blog</a>
+        <a href="contact.html" class="link">contact</a>
+     </div>
+
+     <div class="box">
+        <h3>ACCOUNT</h3>
+        <a href="#" class="link">Account</a>
+        <a href="#" class="link">Chechout</a>
+        <a href="#" class="link">Login</a>
+        <a href="#" class="link">Register</a>
+        <a href="#" class="link">Shopping</a>
+        <a href="#" class="link">Widget</a>
+     </div>
+
+     <div class="box">
+        <h3>NEWSLETTER</h3>
+        <p>Subscribe by our newsletter and get update protidin.</p>
+        <form action="">
+           <input type="email" name="" placeholder="enter your email" id="" class="email">
+           <input type="submit" value="subscribe" class="btn">
+        </form>
+     </div>
+
+  </div>
+
+  <div class="credit"> 2022 <span>@</span> | all rights reserved! </div>
+
+</section>
+
 
 </body>
 
