--- a/inde.html
+++ b/inde.html
@@ -151,7 +151,7 @@
 
 <!------ footer section---------->
 
-<section class="footer">
+<section class="footer section-footer">
 
   <div class="box-container">
 
