--- a/inde.html
+++ b/inde.html
@@ -151,52 +151,63 @@
 
 <!------ footer section---------->
 
-<section class="footer section-footer">
-  <div id="footer-html">
+<section class="all">
 
-
-      <div class="box-container">
-
-        <div class="box">
-            <h3> <i class=""></i> Famms </h3>
-            <p><span id="footer-address">ADDRESS:</span> 28 White tower, Street Name New York City, USA</p>
-            <p><span id="footer-address">TELEPHONE:</span> +91 987 654 3210</p>
-            <p><span id="footer-address">EMAIL:</span> yourmain@gmail.com</p>
+  <!-- Footer -->
+  <footer class="bg-white">
+    <div class="container py-5">
+      <div class="row py-4">
+        <div class="col-lg-4 col-md-6 mb-4 mb-lg-0"><img src="img/logo.png" alt="" width="180" class="mb-3">
+          <p class="font-italic text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+          <ul class="list-inline mt-4">
+            <li class="list-inline-item"><a href="#" target="_blank" title="twitter"><i class="fa fa-twitter"></i></a></li>
+            <li class="list-inline-item"><a href="#" target="_blank" title="facebook"><i class="fa fa-facebook"></i></a></li>
+            <li class="list-inline-item"><a href="#" target="_blank" title="instagram"><i class="fa fa-instagram"></i></a></li>
+            <li class="list-inline-item"><a href="#" target="_blank" title="pinterest"><i class="fa fa-pinterest"></i></a></li>
+            <li class="list-inline-item"><a href="#" target="_blank" title="vimeo"><i class="fa fa-vimeo"></i></a></li>
+          </ul>
         </div>
-
-        <div class="box">
-            <h3>MENU</h3>
-            <a href="index.html" class="link">home</a>
-            <a href="about.html" class="link">about</a>
-            <a href="courses.html" class="link">Services</a>
-            <a href="contact.html" class="link">Testimonial</a>
-            <a href="contact.html" class="link">Blog</a>
-            <a href="contact.html" class="link">contact</a>
+        <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+          <h6 class="text-uppercase font-weight-bold mb-4">Shop</h6>
+          <ul class="list-unstyled mb-0">
+            <li class="mb-2"><a href="#" class="text-muted">For Women</a></li>
+            <li class="mb-2"><a href="#" class="text-muted">For Men</a></li>
+            <li class="mb-2"><a href="#" class="text-muted">Stores</a></li>
+            <li class="mb-2"><a href="#" class="text-muted">Our Blog</a></li>
+          </ul>
         </div>
-
-        <div class="box">
-            <h3>ACCOUNT</h3>
-            <a href="#" class="link">Account</a>
-            <a href="#" class="link">Chechout</a>
-            <a href="#" class="link">Login</a>
-            <a href="#" class="link">Register</a>
-            <a href="#" class="link">Shopping</a>
-            <a href="#" class="link">Widget</a>
+        <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+          <h6 class="text-uppercase font-weight-bold mb-4">Company</h6>
+          <ul class="list-unstyled mb-0">
+            <li class="mb-2"><a href="#" class="text-muted">Login</a></li>
+            <li class="mb-2"><a href="#" class="text-muted">Register</a></li>
+            <li class="mb-2"><a href="#" class="text-muted">Wishlist</a></li>
+            <li class="mb-2"><a href="#" class="text-muted">Our Products</a></li>
+          </ul>
         </div>
-
-        <div class="box">
-            <h3>NEWSLETTER</h3>
-            <p>Subscribe by our newsletter and get update protidin.</p>
-            <form action="">
-              <input type="email" name="" placeholder="enter your email" id="" class="email">
-              <input type="submit" value="subscribe" class="btn">
-            </form>
+        <div class="col-lg-4 col-md-6 mb-lg-0">
+          <h6 class="text-uppercase font-weight-bold mb-4">Newsletter</h6>
+          <p class="text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At itaque temporibus.</p>
+          <div class="p-1 rounded border">
+            <div class="input-group">
+              <input type="email" placeholder="Enter your email address" aria-describedby="button-addon1" class="form-control border-0 shadow-0">
+              <div class="input-group-append">
+                <button id="button-addon1" type="submit" class="btn btn-link"><i class="fa fa-paper-plane"></i></button>
+              </div>
+            </div>
+          </div>
         </div>
-
       </div>
+    </div>
 
-      <div class="credit"> 2022 <span>@</span> | all rights reserved! </div>
-  </div>
+    <!-- Copyrights -->
+    <div class="bg-light py-4">
+      <div class="container text-center">
+        <p class="text-muted mb-0 py-2">© 2022 All rights reserved.</p>
+      </div>
+    </div>
+  </footer>
+  <!-- End -->
 </section>
 
 
