--- a/inde.html
+++ b/inde.html
@@ -14,6 +14,8 @@
 
   <!-- Font Awesome -->
   <script src="https://use.fontawesome.com/releases/v6.1.1/js/all.js"></script>
+
+  <script src="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"></script>
   
   <!-- Bootstrap js -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
