--- a/inde.html
+++ b/inde.html
@@ -173,7 +173,7 @@
             <li class="list-inline-item"><a href="#" target="_blank" title="facebook"><i class="fa-brands fa-facebook"></i></a></li>
             <li class="list-inline-item"><a href="#" target="_blank" title="instagram"><i class="fa-brands fa-instagram"></i></a></li>
             <li class="list-inline-item"><a href="#" target="_blank" title="pinterest"><i class="fa-brands fa-pinterest"></i></a></li>
-            <li class="list-inline-item"><a href="#" target="_blank" title="vimeo"><i class="fa fa-vimeo"></i></a></li>
+            <li class="list-inline-item"><a href="#" target="_blank" title="vimeo"><i class="fa-brands fa-vimeo"></i></a></li>
           </ul>
         </div>
         <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
