footer section completed.

--- a/inde.html
+++ b/inde.html
@@ -156,7 +156,7 @@
 
 <!------ footer section---------->
 
-<section class="all">
+<section>
 
   <!-- Footer -->
   <footer class="bg-white">
@@ -217,6 +217,7 @@
     </div>
   </footer>
   <!-- End -->
+  
 </section>
 
 
