--- a/inde.html
+++ b/inde.html
@@ -162,7 +162,7 @@
   <footer class="bg-white">
     <div class="container py-5">
       <div class="row py-4">
-        <div class="col-lg-4 col-md-6 mb-4 mb-lg-0"><img src=" alt="" width="180" class="mb-3">
+        <div class="col-lg-4 col-md-6 mb-4 mb-lg-0"><img src="images/logo.png" alt="" width="180" class="mb-3">
           <p class="font-italic text-muted">ADDRESS : 28 White tower, Street Name New York City, USA
             <br>
             TELEPHONE : +91 987 654 3210
