--- a/inde.html
+++ b/inde.html
@@ -60,6 +60,9 @@
             <li class="nav-item">
               <a href="" class="nav-link">Contact</a>
             </li>
+            <li class="nav-item">
+              <a href="" class="nav-link"><i class="fa-solid fa-magnifying-glass"></i></a>
+            </li>
           </ul>
         </div>      
       </nav>
