--- a/inde.html
+++ b/inde.html
@@ -61,6 +61,9 @@
               <a href="" class="nav-link">Contact</a>
             </li>
             <li class="nav-item">
+              <a href="" class="nav-link"><i class="fa-solid fa-cart-shopping"></i></a>
+            </li>
+            <li class="nav-item">
               <a href="" class="nav-link"><i class="fa-solid fa-magnifying-glass"></i></a>
             </li>
           </ul>
