--- a/inde.html
+++ b/inde.html
@@ -43,22 +43,22 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="" class="nav-link">Home</a>
+              <a href="index.html" class="nav-link">Home</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Pages
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">about</a>
+                <a class="dropdown-item" href="about.html">about</a>
                 <a class="dropdown-item" href="#">testimonial</a>
               </div>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link">Blog</a>
+              <a href="Blog.html" class="nav-link">Blog</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link">Contact</a>
+              <a href="contact.html" class="nav-link">Contact</a>
             </li>
             <li class="nav-item">
               <a href="" class="nav-link"><i class="fa-solid fa-cart-shopping"></i></a>
