--- a/Home.html
+++ b/Home.html
@@ -244,47 +244,47 @@
    </div>
 </section>
 
-<!------------Customer's Testimonial------------------->
-<div class="Testimonial">
-   <div class="">
-      <div class="">
-         <h1 class="heading">Customer's Testimonial</h1>
-         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-10" src="images/client.jpg" alt="First slide" >
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Anna Trevor</h5>
-                  <p>Dignissimos reprehenderit repellendus nobis error quibusdam? Atque animi sint unde quis reprehenderit, et, perspiciatis, debitis totam est deserunt eius officiis ipsum ducimus ad labore modi voluptatibus accusantium sapiente nam! Quaerat.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-10" src="images/client.jpg" alt="Second slide">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Anna Trevor</h5>
-                  <p>Dignissimos reprehenderit repellendus nobis error quibusdam? Atque animi sint unde quis reprehenderit, et, perspiciatis, debitis totam est deserunt eius officiis ipsum ducimus ad labore modi voluptatibus accusantium sapiente nam! Quaerat.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-10" src="images/client.jpg" alt="Third slide">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Anna Trevor</h5>
-                  <p>Dignissimos reprehenderit repellendus nobis error quibusdam? Atque animi sint unde quis reprehenderit, et, perspiciatis, debitis totam est deserunt eius officiis ipsum ducimus ad labore modi voluptatibus accusantium sapiente nam! Quaerat.</p>
-                </div>
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-      </div>   
+<!-- Testimonials -->
+
+<section id="testimonials">
+
+   <div id="testimonial-carousel" class="carousel slide" data-ride="false">
+     <div class="carousel-inner">
+       <div class="carousel-item active">
+         <img class="testimonial-image" src="images/client.jpg" alt="dog-profile">
+         <h2>Anna Trevor</h2>
+         <em>Customer</em>
+         <p>Dignissimos reprehenderit repellendus nobis error quibusdam? Atque animi sint unde quis reprehenderit, et, 
+           perspiciatis, debitis totam est deserunt eius officiis ipsum ducimus ad labore modi voluptatibus accusantium 
+           sapiente nam! Quaerat.</p>
+       </div>
+       <div class="carousel-item">
+         <img class="testimonial-image" src="images/client.jpg" alt="lady-profile">
+         <h2>Anna Trevor</h2>
+         <em>Customer</em>
+         <p>Dignissimos reprehenderit repellendus nobis error quibusdam? Atque animi sint unde quis reprehenderit, et, 
+           perspiciatis, debitis totam est deserunt eius officiis ipsum ducimus ad labore modi voluptatibus accusantium 
+           sapiente nam! Quaerat.</p>
+       </div>
+       <div class="carousel-item">
+         <img class="testimonial-image" src="images/client.jpg" alt="lady-profile">
+         <h2>Anna Trevor</h2>
+         <em>Customer</em>
+         <p>Dignissimos reprehenderit repellendus nobis error quibusdam? Atque animi sint unde quis reprehenderit, et, 
+           perspiciatis, debitis totam est deserunt eius officiis ipsum ducimus ad labore modi voluptatibus accusantium 
+           sapiente nam! Quaerat.</p>
+       </div>
+     </div>
+     <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
+         <span class="carousel-control-prev-icon"></span>
+     </a>
+     <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
+         <span class="carousel-control-next-icon"></span>
+     </a>
    </div>
-</div>
+ 
+ </section>
+ 
 
 
 
